Add archive commands
Add commands to create and extract archives.
Note that this is an initial commit, only extracting zip's is implemented currently.

--- a/.github/workflows/create-phar.yml
+++ b/.github/workflows/create-phar.yml
@@ -1,10 +1,7 @@
 name: Deploy
 on:
-  push:
-    branches:
-      - "!*"
-    tags:
-      - '*'
+  release:
+    types: [published]
 jobs:
   job-1:
     name: Generate Phar File
